Fix font resizing issue on ios

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -3,11 +3,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;  
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: none;
-  -moz-text-size-adjust: none;
-  text-size-adjust: none;
 }
 
 code {
